[package]
name = "bql-print"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.8.7", features = ["multipart"] }
brother_ql = { version = "2.0.1", features = ["serde"] }
image = "0.25.2"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
